WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111150
REGRESSION(
r144422
): Broke compilation on chromium-mac
https://bugs.webkit.org/show_bug.cgi?id=111150
Summary
REGRESSION(r144422): Broke compilation on chromium-mac
jochen
Reported
2013-03-01 00:22:40 PST
REGRESSION(
r144422
): Broke compilation on chromium-mac
Attachments
Patch
(1.25 KB, patch)
2013-03-01 00:23 PST
,
jochen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
jochen
Comment 1
2013-03-01 00:23:07 PST
Created
attachment 190899
[details]
Patch
jochen
Comment 2
2013-03-01 00:25:04 PST
Comment on
attachment 190899
[details]
Patch Clearing flags on attachment: 190899 Committed
r144424
: <
http://trac.webkit.org/changeset/144424
>
jochen
Comment 3
2013-03-01 00:25:08 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4
2013-03-01 11:23:05 PST
Thank you for the fix. I'm curious why chromium EWS bots were green with this!
jochen
Comment 5
2013-03-01 11:52:02 PST
(In reply to
comment #4
)
> Thank you for the fix. I'm curious why chromium EWS bots were green with this!
Sadly, we don't have EWS bots for all configurations :-/
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug