REGRESSION(r144422): Broke compilation on chromium-mac https://bugs.webkit.org/show_bug.cgi?id=111150

Unreviewed build fix.

* src/WebFrameImpl.h:
(WebCore):

Canonical link: https://commits.webkit.org/129493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144424 268f45cc-cd09-0410-ab3c-d52691b4dbfc